[gd_scene load_steps=3 format=3 uid="uid://j5jwh3u0yjy5"]

[ext_resource type="Script" path="res://src/UI/MenuBar/Preference/Scripts/color_panel.gd" id="1_1prfv"]
[ext_resource type="PackedScene" uid="uid://nfofbgvn8r41" path="res://src/UI/Components/input_color.tscn" id="2_h2kjl"]

[node name="ColorPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelX"
script = ExtResource("1_1prfv")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "KEY_BUBBLE_COLOR"

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="BubbleActiveInputColor" parent="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_h2kjl")]
layout_mode = 2
name_label = "KEY_ACTIVE"

[node name="BubbleInactiveInputColor" parent="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_h2kjl")]
layout_mode = 2
name_label = "KEY_INACTIVE"

[node name="Label2" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "KEY_PADDING_COLOR"

[node name="MarginContainer2" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="PaddingActiveInputColor" parent="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer" instance=ExtResource("2_h2kjl")]
layout_mode = 2
name_label = "KEY_ACTIVE"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_SWATCHES"

[node name="ColorPickerButton" type="ColorPickerButton" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = " "

[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/BubbleActiveInputColor" to="." method="_on_bubble_active_input_color_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/BubbleInactiveInputColor" to="." method="_on_bubble_inactive_input_color_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/PaddingActiveInputColor" to="." method="_on_padding_active_input_color_changed"]
[connection signal="picker_created" from="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/ColorPickerButton" to="." method="_on_color_picker_button_picker_created"]
